# CollisionBasedGasSimulator

./: README.md  architecture.md  result.webm
code/: .gitignore  CMakeLists.txt  datatypes.h  generate_kernels.sh  main.c  opencl_header.c.in  simulator.c  simulator.cl  simulator.cl.in  simulator.h
code/cmake/: CPM.cmake
